# DBusPermissionManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
PermissionsService/: CMakeLists.txt  db.cpp  db.h  main.cpp  permissions-server-glue.h  permissions_adaptor.cpp  permissions_adaptor.h  permissions_server_glue.h
TimeRequester/: CMakeLists.txt  common.h  main.cpp  permissions_client.h  permissions_client_glue.h  time_client.cpp  time_client.h  time_client_glue.h
TimeService/: CMakeLists.txt  common.h  main.cpp  permissions_client.cpp  permissions_client_glue.h  time_adaptor.cpp  time_adaptor.h  time_server_glue.h
lib/: libsdbus-c++.so.2  libsdbus-c++.so.2.0.0
src/: db.cpp  db.h
xml/: com-system-permissions.xml  com-system-time.xml
